<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <AutoCompleteTextView
        android:id="@+id/editText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="none"
        android:text="@string/recipe_search_ingredients_title"
        android:textSize="30sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.72" />

    <EditText
        android:id="@+id/ingredientToAddText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/recipe_search_ingredients_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_search_ingredients_add_ingredient_to_search_button" />

    <Button
        android:id="@+id/searchRecipeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_search_ingredients_search_recipe_button" />

</LinearLayout>